  RNAfold as well.
* PhyloNode.tipToTipDistances can now work on a subset of tips by passing
  either a list of tip names or a list of tip nodes using the endpoints param.
* deprecating reconstructAncestralSequences to deprecating
  reconstructAncestralSeqs.
* updated app controller parameters for FastTree v1.1
* Allow and require a more recent version of Pyrex.

.. warning:: Pyrex is no longer the accepted way to develop extensions. Use
    `Cython <http://www.cython.org/>`_ instead.

Bug Fixes
---------

* the alignment sample methods and xsample (randint had the wrong max
  argument)
* Fixes the tests that no longer work with NCBI's API changes, and sticks a
  big warning for the unwary in the ncbi module pointing users to the
  "official" list of reported rettypes. Note that the rettypes changed
  recently and NCBI says they do not plan to support the old behavior.
* The TreeNode operators cmp, contains, and any operator that relies on those
  methods will now only perform comparisons against the objects id. Prior
  behavior first checked the TreeNode's Name attribute and then object id if
  the Name was not present. This resulted in ambiguous behavior in certain
  situations.
* Added type conversion to Mantel so it works on lists.
* kendall tau fix, bug 2794469
* Table now raises a RuntimeError if provided malformed data.

Cogent 1.1 - 1.2
================

New Features
------------

* Code for performing molecular coevolution/covariation analyses on multiple
  sequence alignments, plus support files. (Described in J. Caporaso et al.
  BMC Evol Biol, 8(1):327, 2008.)
* App controller for `CD-HIT <http://www.bioinformatics.org/cd-hit/>`_
* A ParameterEnumerator object is now available in cogent.app.util. This
  method will iterate over a range of parameters, returning parameter dicts
  that can be used with the relevant app controller.
* Sequence and alignment objects that inherit from Annotatable can now mask