@@ -43,9 +43,10 @@ version_info = tuple([int(v) for v in version.split(".") if v.isdigit()])
 
 from cogent.util.table import Table as _Table
 from cogent.parse.table import load_delimited
-from cogent.core.tree import LoadTree
+from cogent.core.tree import TreeBuilder, TreeError
+from cogent.parse.tree_xml import parse_string as tree_xml_parse_string
+from cogent.parse.newick import parse_string as newick_parse_string
 from cogent.core.alignment import SequenceCollection
-
 from cogent.core.alignment import Alignment
 from cogent.parse.sequence import FromFilenameParser
 #note that moltype has to be imported last, because it sets the moltype in
@@ -171,3 +172,49 @@ def LoadTable(filename=None, sep=',', reader=None, header=None, rows=None,
                 legend=legend)
     
     return table
+
+def LoadTree(filename=None, treestring=None, tip_names=None, format=None, \
+    underscore_unmunge=False):
+
+    """Constructor for tree.
+    
+    Arguments, use only one of:
+        - filename: a file containing a newick or xml formatted tree.
+        - treestring: a newick or xml formatted tree string.
+        - tip_names: a list of tip names.
+
+    Note: underscore_unmunging is turned off by default, although it is part
+    of the Newick format. Set underscore_unmunge to True to replace underscores
+    with spaces in all names read.
+    """
+
+    if filename:
+        assert not (treestring or tip_names)
+        treestring = open(filename).read()
+        if format is None and filename.endswith('.xml'):
+            format = "xml"
+    if treestring:
+        assert not tip_names
+        if format is None and treestring.startswith('<'):
+            format = "xml"
+        if format == "xml":
+            parser = tree_xml_parse_string
+        else:
+            parser = newick_parse_string
+        tree_builder = TreeBuilder().createEdge
+        #FIXME: More general strategy for underscore_unmunge
+        if parser is newick_parse_string:
+            tree = parser(treestring, tree_builder, \
+                    underscore_unmunge=underscore_unmunge)
+        else:
+            tree = parser(treestring, tree_builder)
+        if not tree.NameLoaded:
+            tree.Name = 'root'
+    elif tip_names:
+        tree_builder = TreeBuilder().createEdge
+        tips = [tree_builder([], tip_name, {}) for tip_name in tip_names]
+        tree = tree_builder(tips, 'root', {})
+    else:
+        raise TreeError, 'filename or treestring not specified'
+    return tree
+
