@@ -2,7 +2,8 @@
 """Tests of classes for dealing with trees and phylogeny.
 """
 from copy import copy, deepcopy
-from cogent.core.tree import TreeNode, PhyloNode, LoadTree, TreeError
+from cogent import LoadTree
+from cogent.core.tree import TreeNode, PhyloNode, TreeError
 from cogent.parse.tree import DndParser
 from cogent.maths.stats.test import correlation
 from cogent.util.unit_test import TestCase, main
@@ -23,6 +24,8 @@ class TreeTests(TestCase):
 
     def test_LoadTree(self):
         """LoadTree should load a tree from a file or a string"""
+        #NOTE: This method now sits in cogent.__init__
+
         t_str = '(a_a:10,(b_b:2,c_c:4):5);'
         #NOTE: Tree quotes these labels because they have underscores in them.
         result_str = "('a_a':10.0,('b_b':2.0,'c_c':4.0):5.0);"
